# femog

./: .gitignore  .gitmodules  README.md
.circleci/: config.yml
code/: CMakeLists.txt  camera.cc  camera.h  fem_domain.h  fem_field.cc  fem_field.h  fem_field_loader.cc  fem_field_loader.h  fragment_shader.glsl  isometry.h  main.cc  permutation.h  vertex_shader.glsl  viewer.cc  viewer.h
code/fem/: .gitignore  CMakeLists.txt  conjugate_gradient.cc  conjugate_gradient.h  domain.cc  domain.h  domain_field_base.cc  domain_field_base.h  field.h  gpu_solver.cu  gpu_solver.h  gpu_wave_solver.cu  gpu_wave_solver.h  io.cc  io.h  system.cc  system.cu  system.h
code/fem/tests/: CMakeLists.txt  domain.cc  field.cc  io.cc
code/glsxx/: array_buffer.h  element_array_buffer.h  program.h  shader.h  vertex_array.h
code/tests/: CMakeLists.txt  camera_test.cc  fem_domain_test.cc  fem_field_test.cc  isometry_test.cc  permutation_test.cc
data/: ccircle.txt  circle.txt  cp_circle.txt  double_quad.txt  l_shape.txt  primitive.txt  projected_cube.txt  quad.txt  quad_ring.txt  simple.txt  test.txt  test2.txt
thesis/: .gitignore  references.bib  thesis.tex
thesis/sections/: abstract.tex  background.tex  conclusion.tex  ellpack_format.tex  heat_equation.tex  implementation.tex  introduction.tex  methodology.tex  results.tex  statutory_declaration.tex  symbol_table.tex  titlepage.tex
thesis/sections/code/: cpu_conjugate_gradient.cc  cpu_wave_system.cc  cpu_wave_system_advance.cc  cpu_wave_system_constructor.cc  domain.cc  domain_base.cc  domain_implementation.cc  domain_implementation_subdivide.cc  edge.cc  gpu_wave_system.cc  gpu_wave_system_accessors.cc  gpu_wave_system_advance.cc  gpu_wave_system_constructor.cc  gpu_wave_system_destructor.cc  gpu_wave_system_kernel.cc  model-test.txt  primitive.cc
thesis/sections/images/: domain.ggb  domain_discretization_1.ggb  domain_discretization_2.ggb  domain_example.ggb  domain_one_dimension_example.ggb  fem_scheme.tex  hat_function.ggb  hat_function_one_dimension_example.ggb  hat_functions_linear_combination.ggb  triangle.ggb
thesis/sections/plots/: speedup.gp  speedup.tex  speedup_plot.tex
